summative.moria.Moria.scala.error
Compilation error:
Moria:13: error: illegal start of statement (no modifiers allowed here)
override def run(){
^